WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89932
JavaScript resources have low priority when SVG is enabled
https://bugs.webkit.org/show_bug.cgi?id=89932
Summary
JavaScript resources have low priority when SVG is enabled
Pratik Solanki
Reported
2012-06-25 18:19:53 PDT
The following change made it so that JavaScript resources have low priority.
https://bugs.webkit.org/show_bug.cgi?id=12499
http://trac.webkit.org/changeset/108785
The problematic part is --- a/Source/WebCore/loader/cache/CachedResource.cpp +++ b/Source/WebCore/loader/cache/CachedResource.cpp @@ -61,6 +61,10 @@ static ResourceLoadPriority defaultPriorityForResourceType(CachedResource::Type #endif return ResourceLoadPriorityHigh; case CachedResource::Script: +#if ENABLE(SVG) + case CachedResource::SVGDocumentResource: + return ResourceLoadPriorityLow; +#endif case CachedResource::FontResource: case CachedResource::RawResource: return ResourceLoadPriorityMedium; CachedResource::Script now returns ResourceLoadPriorityLow instead of ResourceLoadPriorityMedium when SVG is enabled.
Attachments
Patch
(2.25 KB, patch)
2012-06-25 22:30 PDT
,
Pratik Solanki
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pratik Solanki
Comment 1
2012-06-25 18:20:44 PDT
<
rdar://problem/11741325
>
Pratik Solanki
Comment 2
2012-06-25 22:30:02 PDT
Created
attachment 149456
[details]
Patch
Pratik Solanki
Comment 3
2012-06-25 23:06:19 PDT
Committed
r121231
: <
http://trac.webkit.org/changeset/121231
>
Darin Adler
Comment 4
2012-06-26 11:41:48 PDT
Comment on
attachment 149456
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=149456&action=review
> Source/WebCore/ChangeLog:9 > +
r108785
inadvertently lowered the priority of JavaScript resources. Fix the code so we set
It was not
r108785
. Looking to find out when this regressed.
Darin Adler
Comment 5
2012-06-26 11:43:14 PDT
Comment on
attachment 149456
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=149456&action=review
>> Source/WebCore/ChangeLog:9 >> +
r108785
inadvertently lowered the priority of JavaScript resources. Fix the code so we set > > It was not
r108785
. Looking to find out when this regressed.
Sorry, my bad, it was
r108785
exactly as Pratik said. My apologies for the misleading comment.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug