JavaScript resources have low priority when SVG is enabled https://bugs.webkit.org/show_bug.cgi?id=89932 <rdar://problem/11741325>

Reviewed by Adele Peterson.

r108785 inadvertently lowered the priority of JavaScript resources. Fix the code so we set
the correct priority for scripts. Also, move the code so that all ifdefs are together at the
bottom to make it a bit easier to read..

* loader/cache/CachedResource.cpp:
(WebCore::defaultPriorityForResourceType):

Canonical link: https://commits.webkit.org/107801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121231 268f45cc-cd09-0410-ab3c-d52691b4dbfc